Kubernetes-Manifests-file/docdb-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docdb-test
  namespace: three-tier
spec:
  containers:
  - name: mongo
    image: mongo:6.0
    command: ["sleep", "3600"] # keeps the pod running
  restartPolicy: Never
